core1.0: add the "nope" message

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -560,6 +560,18 @@ The client SHOULD observe the `core1.pub` reply to learn whether the requested c
 *Rationale:* For example, consider the case of the client trying to set `core1.client-msg-bytes-max` to `32768`.
 The server might reject this, and report the previous value in the `core1.pub` response; or it might choose a value inbetween the previous and the requested value because it absolutely cannot process messages larger than that.
 
+### 5.4. The `core1.nope` message
+
+- Directionality: any
+- Required capabilities: none
+- Number of arguments: none
+
+Upon receiving an invalid message, a server or client MUST reply by sending a `core1.nope` message if the message type of the invalid message expected the recipient to answer with some other message.
+
+*Rationale:* The purpose of the `core1.nope` message is solely to unblock any processes which are waiting for a reply to their previous message.
+This module does not define any generic error reporting mechanisms beyond this message type.
+We consider it pointless to try to get any misbehaving process to start behaving correctly by reporting their errors.
+
 ## 6. Properties for `vt6/core1`
 
 ### 6.1. The `core1.server-msg-bytes-max` property
