--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -24,18 +24,19 @@ A **bidirectional text stream** is an object from which byte strings can be read
 A VT6 client SHALL have access to a bidirectional text stream, which is called this client's **standard input/output**.
 
 A VT6 client MAY have a method to gain access to further bidirectional text streams.
-Text streams obtained through this method shall be called **server connections**.
-When a client writes a byte string into a server connection, it SHALL be received by this client's server.
+Text streams obtained through this method are called **server connections**.
+When a client writes a byte string into a server connection, it MUST NOT be received by any process but this client's server.
 When a client reads a byte string from a server connection, it SHALL have been sent by this client's server.
-The server SHALL be able to distinguish between server connections opened by different clients, as well as server connections opened by the same client.
+The server SHALL be able to distinguish between server connections opened by different clients, as well as different server connections opened by the same client.
+This does not necessarily mean that the server can identify which server connection belongs to which client process.
 
-*Rationale:* The server connection is separate from the standard input and output for applications where the VT6 client must be certain that the messages it sends are received by the VT6 server and not by another party (such as the next client in a shell pipe), and vice versa for server-to-client messages.
+*Rationale:* The server connection is separate from the standard input and output for scenarios where the VT6 client must be certain that the messages it sends are received by the VT6 server and not by another party (such as the next client in a shell pipe), and vice versa for server-to-client messages.
 In POSIX, the message input and output replace the [special capabilities of terminal devices](https://linux.die.net/man/3/termios).
 
 If the platform allows VT6 client processes to be started while a VT6 server is not present, the client process MUST have a method to determine whether a VT6 server is present.
-If no VT6 server is present, the client process SHALL then not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
+If no VT6 server is present, the client process SHALL not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
 
-If a VT6 client has access to and is using at least one server connection, it is said to be operating in **normal mode**.
+If a VT6 client has a method to obtain server connections, it is said to be operating in **normal mode**.
 Otherwise, it is said to be operating in **multiplexed mode**.
 
 *Rationale:* The multiplexed mode is intended for clients which only have a single bidirectional text stream to their server and have no way of establishing a separate bidirectional text stream to use as a server connection.
