--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -48,13 +48,13 @@ The most prominent example of this is a client connected via a remote login prot
 
 A platform is defined by a *platform integration module*, which is a VT6 module (see section 3).
 
-For each official module (see section 3.3) that describes platform requirements, the specification for the platform integration module MUST define how these requirements are met on the platform defined by it.
+For each official module (see section 3.3) that references platform-specific behavior, the specification for each platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
 
 A platform integration module MAY define message types, properties and capabilities (see section 3) which are only available on the platform defined by it.
 
 *The remainder of this section is non-normative.*
 
-The following platform integration modules are known at the time of publication of this document:
+The following platform integration modules are available at the time of publication of this document:
 
 - [posix1](../posix1/) for operating systems that implement the POSIX specification
 
