amendments from review

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -37,9 +37,9 @@ VT6 signals are dispatched to clients by sending the corresponding POSIX signals
 - The `sig1.quit` message corresponds to the `SIGQUIT` signal.
 - The `sig1.suspend` message corresponds to the `SIGSTOP` signal.
 
-When there is no signal receiver, the terminal SHOULD run all clients inside a single process group, and send these POSIX signals to that process group.
+When there is no signal dispatcher, the terminal SHOULD run all clients inside a single process group, and send these POSIX signals to that process group.
 
-When there is a signal receiver, the signal receiver SHALL use at least one process group in the same way.
-If the signal receiver can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group.
+When there is a signal dispatcher, the signal dispatcher SHALL use at least one process group in the same way.
+If the signal dispatcher can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group only.
 
-When a server or signal receiver uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the server or signal receiver to do so.
+When a server or signal dispatcher uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the server or signal dispatcher to do so.
