--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -46,9 +46,9 @@ The most prominent example of this is a client connected via a remote login prot
 
 ### 1.1. Platforms
 
-A platform is defined by a *platform integration module*, which is a VT6 module (see section 3).
+A platform is defined by a **platform integration module**, which is a VT6 module (see section 3).
 
-For each official module (see section 3.3) that references platform-specific behavior, the specification for each platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
+For each official module (see section 3.3) that references **platform-specific behavior**, the specification for each platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
 
 A platform integration module MAY define message types, properties and capabilities (see section 3) which are only available on the platform defined by it.
 
