term1.0: define how standard output works

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -328,6 +328,12 @@ Analogously, when a property is said to **accept unsigned integer values**, this
 In both these cases, the numerical value of each such atom is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the string value of the atom.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
+```abnf
+boolean = "true" / "false"
+```
+
+When a property is said to **accept boolean values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<integer>` grammar element defined above.
+
 Section 6 of this specification uses the property types defined in this section.
 Other module specifications which use some or all of the property types defined in this section SHALL reference this section.
 The recommended way to do so is by including the following sentence near the start of the specification:
