--- a/spec/term/1.0.md
+++ b/spec/term/1.0.md
@@ -18,11 +18,56 @@ Besides [`vt6/core`](https://vt6.io/std/core/), this is the only module that we 
 
 ### 1.1. Terminals
 
-TODO define what a terminal is (two-dimensional character array)
+When a VT6 server agrees to using this module, it MUST have a terminal that its clients can interact with as described in this specification.
+
+A **terminal** is a triple of:
+- a two-dimensional array of Unicode characters,
+- a **cursor** that points at a position in this character array, and
+- an input stream from which Unicode characters can be read.
+
+*Rationale:* A printer can provide such a terminal even though it has no input, because the definition doesnt't require that the input stream ever becomes ready for reading.
+
+The two dimensions of the character array are called its **horizontal** and **vertical** dimension.
+The character array is made up of **columns** of characters along the horizontal dimension, and of **rows** of characters along the vertical dimension.
+The number of columns and rows in the character array is called the terminal's **width** and **scrollback height**, respectively.
+
+Columns are numbered from left to right, and rows are numbered from top to bottom, in both cases starting with zero.
+A position in the array is addressed by a pair of the index of its row and the index of its column.
+For example, the position `(0,0)` refers to the character at the top left corner of the array.
+
+For graphical terminals, the character array MAY be much larger than what can be displayed on screen at once.
+In this case, the character array itself is called the terminal's **scrollback**, and the range of currently visible columns is called the terminal's **viewport**.
+The number of columns in the viewport is called the terminal's **viewport height**.
+
+*Rationale:* The term "terminal height" is not defined to avoid confusion. We always refer explicitly to either the scrollback height or the viewport height.
 
 ### 1.2. Standard output
 
-TODO describe how characters on stdout change the display (printable chars are printed, control chars CR, NL, HT, BS work as such; implementation may recognize additional control chars/sequences e.g. for legacy compat)
+When a client writes a byte string into its standard output, the server SHALL assume that this byte string is encoded in [UTF-8](https://tools.ietf.org/html/rfc3629), and decode it into a string of Unicode characters.
+
+When the `term1.output-protected` property is true, the server MUST discard all characters from this string that are in the general categories Cc ("Other, control"), Cf ("Other, format"), Cs ("Other, surrogate"), Co ("Other, private use") and Cn ("Other, not assigned"), except for U+0009 (Horizontal Tab), U+000A (New Line) and U+000D (Carriage Return).
+
+When the `term1.output-protected` property is false, the server MAY  alternatively:
+
+- choose a printable representation for each such character and replace the character with that representation before continuing, or
+- interpret the character as starting a control sequence if the character is U+001B (Escape).
+
+When a control character is interpreted as starting a control sequence, the entire control sequence SHALL be removed from the string before processing as described in this section continues, and the remaining string MAY be modified depending on the semantics of the control sequence.
+
+*Rationale:* This rule allows terminals to be backwards-compatible with legacy control sequences, such as those defined in VT100 aka ECMA-48 aka ANSI X3.64 aka ISO/IEC 6429.
+
+Characters that are in the general category Co ("Other, private use") MAY be exempted from the treatment described above if the characters in question have a graphic representation in the font that the terminal uses to display its character array.
+
+Finally, the server MUST discard each U+000A (new line) character that immediately succeeds a U+000D (carriage return) character, and then convert each U+000D character into a U+000A character.
+
+*Rationale:* This rule ensures consistent line break handling across different platforms, i.e., CR+NL = CR = NL.
+
+The remaining string of Unicode characters SHALL then be written into the character array starting from the position pointed to by the cursor, using the rules for normalization, writing direction, line breaking and handling of bidirectional text as laid out in the Unicode Standard, as published by the [Unicode consortium](https://www.unicode.org).
+Combining characters are written into the same position as their base characters.
+
+The cursor SHALL be updated to point to that position in the character array where, if the next character to be written to standard output by a client was U+FFFD (Replacement Character), that character would be written.
+
+*Rationale:* The Replacement Character is chosen because it is particularly boring. It has a neutral directionality, does not combine with anything, and does not change change line-breaking or hyphenation rules.
 
 ### 1.3. Standard input
 
@@ -34,7 +79,7 @@ This module DEPENDS ON any version of the [`vt6/core` module](https://vt6.io/std
 
 ## 3. Properties for `vt6/term1`
 
-### 3.1. The `term1.viewport-width` property
+### 3.1. The `term1.width` property
 
 TODO unsigned integer (but not zero)
 
@@ -57,3 +102,15 @@ TODO enabled by default; when enabled, printable characters entered by the user 
 ### 3.6. The `term1.output-protected` property
 
 TODO disabled by default; when enabled, server MUST disregard all unprintable characters and control characters (incl. \<ESC\>) except for CR/LF/HT on any standard input; may only be disabled on the server connection where it was enabled; will be disabled automatically when the server connection enabling it is closed (the purpose of this is to prevent exploits where carefully crafted shell scripts appear benign when printed with `cat(1)`, but contain malicious code which is hidden with backspace chars and VT100 control sequences)
+
+### 3.7. The `term1.output-reflow` property
+
+TODO no defined default value (depends on server support); when enabled, server reflows content when the viewport width changes
+
+### 3.8. The `term1.output-wordwrap` property
+
+TODO no defined default value (depends on server support); when enabled, server reflows content when the viewport width changes
+
+### 3.9. The `term1.output-tabwidth` property
+
+TODO unsigned integer (zero is not allowed)
