copy-paste error

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -332,7 +332,7 @@ The module specification defining the property may impose additional restriction
 boolean = "true" / "false"
 ```
 
-When a property is said to **accept boolean values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<integer>` grammar element defined above.
+When a property is said to **accept boolean values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<boolean>` grammar element defined above.
 
 Section 6 of this specification uses the property types defined in this section.
 Other module specifications which use some or all of the property types defined in this section SHALL reference this section.
