fix formatting, wording

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -405,7 +405,7 @@ Receipt of the `have` message containing this argument entitles the client to us
 The server MUST NOT agree to using multiple major versions of the same module, neither in a single `have` message or across multiple `have` messages for the same client.
 The server MAY agree to using different major versions of the same module with different clients.
 
-If the specification of a module specifies that its module or a capability within that module DEPENDS ON another module or capability, the server MUST NOT agree to using this module or capability if it has already agreed to using the dependency, unless it agrees to using the dependency in the same `have` message.
+If the specification of a module specifies that its module or a capability within that module **DEPENDS ON** another module or capability, the server MUST NOT agree to using this module or capability unless it has already agreed to using the dependency, or it agrees to using the dependency in the same `have` message.
 The recommended way to do so is by using the word "DEPENDS ON" in the way defined by this paragraph, and including the following sentence near the start of the specification:
 
 > The keyword "DEPENDS ON" in this document is to be interpreted as described in section 4.2 of the `vt6/core1.0` specification.
