--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -591,7 +591,7 @@ We consider it pointless to try to get any misbehaving process to start behaving
 - Can be set by client: yes
 
 The value of this property is the maximum length of a message sent from the server to the client in bytes.
-The value of this property MUST NOT be larger than 1024.
+The default value of this property MUST NOT be larger than 1024.
 
 *Rationale:* The upper limit is important because clients are therefore assured that a 1 KiB buffer can hold any single message sent by the server, unless a different limit is negotiated.
 We choose this standard buffer size of 1 KiB such that most, if not all, messages that ever need to be sent fit into this buffer, without wasting too much memory on buffers.
@@ -603,7 +603,7 @@ We choose this standard buffer size of 1 KiB such that most, if not all, message
 - Can be set by client: yes
 
 The value of this property is the maximum length of a message sent from the client to the server in bytes.
-The value of this property MUST NOT be smaller than 1024.
+The default value of this property MUST NOT be smaller than 1024.
 
 *Rationale:* The lower limit is important because clients are therefore assured that any messages smaller than 1 KiB will be accepted by any server, unless a different limit is negotiated.
 The rationale from section 6.1 applies respectively.
