link to utf8everywhere.org as a rationale

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -83,6 +83,8 @@ space   = %x20 / %x09-0D    ; ASCII characters which are accepted by isspace() u
 
 Furthermore, the `<quoted-char>` element accepts all byte strings which encode exactly one Unicode character using the UTF-8 encoding, except for the ASCII backslash or the ASCII double quote.
 
+*Rationale:* [utf8everywhere.org](http://utf8everywhere.org) nicely sums up the arguments for not bothering with other text encodings.
+
 An **s-expression** is a parenthesis-delimited sequence of atoms or other s-expressions, which are referred to as the s-expression's **elements**.
 Whitespace (sequences of `<space>`) between the parentheses and atoms is ignored.
 For example, the following three s-expressions are equivalent.
