remove module version number from `<scoped-name>`
The reason for this is mostly YAGNI. I don't see any disadvantages to
this change, and two main advantages:

1. Backwards-compatible implementations become easier. For example, once
   there are three different major versions of vt6/core, some clients
   might only want to use those behaviors that stayed the same across
   all those major versions. Those applications can just
   `(want core1 core2 core3)` and check that the server agrees to *any*
   version of core. Then they can forget about the negotiation entirely,
   because the message types and other scoped names are the same
   regardless of which major version of the module is in use.

2. It makes talking about versions easier. Before this change, we used at
   least the following identifiers for vt6/core1.0:

       vt6/core1.0    in the spec title
       vt6/core1      in the backwards-compatible parts of the spec
       vt6/core       to refer to the module regardless of major version
       core1.0        in the spec text
       core1          in scoped names and in the spec text
       core           in the spec text

   This change eliminates all usages of "core1" and "vt6/core1" except
   for the want message (where it is actually required), so the only
   remaining identifiers are:

       vt6/core1.0    to refer to a spec
       vt6/core       to refer to a module
       core           in scoped names and in the spec text

   The only exception is in `have` and `want` messages, where "core1"
   and "core1.0" are entirely appropriate.

Closes #18.

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -13,7 +13,7 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 Operating systems that implement the [POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) are admissible environments for VT6 clients and servers.
 This module defines how various platform-specific mechanisms throughout VT6 work on such operating systems.
 
-## 2. Definitions for the `vt6/core1` module
+## 2. Definitions for the `vt6/core1.0` module
 
 Standard input and output for each VT6 client are the file descriptors 0 and 1 of that process, respectively.
 
@@ -29,13 +29,13 @@ Therefore, VT6 clients MUST use the following method to determine whether a VT6 
 
 3. If the `VT6` environment variable is absent and the `TERM` environment variable does not contain the string `vt6`, the VT6 client MUST consider the VT6 server to be absent.
 
-## 3. Definitions for the `vt6/sig1` module
+## 3. Definitions for the `vt6/sig1.0` module
 
 VT6 signals are dispatched to clients by sending the corresponding POSIX signals to the client processes:
 
-- The `sig1.interrupt` message corresponds to the `SIGINT` signal.
-- The `sig1.quit` message corresponds to the `SIGQUIT` signal.
-- The `sig1.suspend` message corresponds to the `SIGSTOP` signal.
+- The `sig.interrupt` message corresponds to the `SIGINT` signal.
+- The `sig.quit` message corresponds to the `SIGQUIT` signal.
+- The `sig.suspend` message corresponds to the `SIGSTOP` signal.
 
 When there is no signal dispatcher, the terminal SHOULD run all clients inside a single process group, and send these POSIX signals to that process group.
 
