core1.0: fix examples to follow the "core first" rule
According to the same document, the first module that is negotiated
MUST be any version of core.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -406,37 +406,37 @@ The snippet is not a single message stream.
 Each pair of messages is to be considered individually.
 
 ```vt6
-(want foo1 bar2)
-(have foo1.0 bar2.3)
---> valid; client can now use foo1.0 module and either bar2.0, bar2.1, bar2.2 or bar2.3 module
+(want core1 foo2)
+(have core1.0 foo2.3)
+--> valid; client can now use core1.0 module and either foo2.0, foo2.1, foo2.2 or foo2.3 module
 
-(want foo1 foo2)
-(have foo2.1)
---> valid; client can now use either foo2.0 or foo2.1 module, but not foo1.x modules
+(want core1 core2)
+(have core2.1)
+--> valid; client can now use either core2.0 or core2.1 module, but not core1.x modules
 
-(want foo1.cap)
+(want core1 foo1.cap)
 (have)
 --> "want" is invalid; cannot negotiate capability from foo1 before foo1 module has been agreed upon
 
-(want foo1 foo1.cap)
-(have foo1.0)
+(want core1 foo1 foo1.cap)
+(have core1.0 foo1.1)
 --> valid; server has not agreed to capability
 
-(want foo1 foo1.cap)
-(have foo1.0 foo1.cap)
+(want core1 foo1 foo1.cap)
+(have core1.0 foo1.1 foo1.cap)
 --> valid; server has agreed to capability
 
-(want foo1 foo1.cap)
-(have foo1.cap foo1.0)
+(want core1 foo1 foo1.cap)
+(have foo1.cap core1.0 foo1.1)
 --> "have" is invalid; argument order must match "want" message
 
-(want foo1 bar1 foo1.cap)
-(have foo1.0 foo1.cap)
+(want core1 foo1 bar1 foo1.cap)
+(have core1.0 foo1.1 foo1.cap)
 --> valid; some modules not agreed to, but argument order is preserved
 
-(want foo1 bar1)
-(have foo1.0 qux1.0)
---> "have" is invalid; "have" argument "qux1.0" does not correspond to any "want" argument
+(want core1 foo1)
+(have core1.0 bar1.0)
+--> "have" is invalid; "have" argument "bar1.0" does not correspond to any "want" argument
 ```
 
 The server is under no obligation of agreeing to any module or capability.
