--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -396,7 +396,7 @@ A server SHALL NOT agree to using a capability if it has not previously agreed t
 
 For `want` arguments that are module names, the corresponding `have` argument is the module name, with a dot and a positive integer appended to it.
 The positive integer indicates the maximal minor version of this module that is understood by the server.
-Receipt of the `have` message containing this argument entitles the client to use all message types, properties and capabilities defined in the specification of that module with the same major version number and the same, or a smaller, minor version number.
+Receipt of the `have` message containing this argument entitles the client to use all message types, properties and capabilities defined in a specification of that module with the same major version number and the same, or a smaller, minor version number.
 
 The server MUST NOT agree to using multiple major versions of the same module, neither in a single `have` message or across multiple `have` messages for the same client.
 The server MAY agree to using different major versions of the same module with different clients.
