core1.0: less undefined behavior
I ran across this gap in the definitions when writing the conformance test
for want/have negotiation.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -401,6 +401,9 @@ Receipt of the `have` message containing this argument entitles the client to us
 The server MUST NOT agree to using multiple major versions of the same module, neither in a single `have` message or across multiple `have` messages for the same client.
 The server MAY agree to using different major versions of the same module with different clients.
 
+When an argument in a `want` message is identical to an earlier argument in the same `want` message, or to an argument in an earlier `want` message, the server MUST reply consistently.
+If it did not agree to the earlier argument, it MUST NOT agree to this argument, and vice versa.
+
 The following snippet shows examples of valid and invalid pairs of `want` messages and `have` replies.
 The snippet is not a single message stream.
 Each pair of messages is to be considered individually.
