incorporate review comments

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -365,7 +365,7 @@ module-name-with-major-version = module-name major-version
 The `want` message informs the server of modules and capabilities that the client wants to use.
 Each argument is a pair of module name and major version number as accepted by `<module-name-with-major-version>`, or a capability name as accepted by `<scoped-name>`.
 For each argument that is a capability name, the server MUST already have agreed to using a module that defines this capability.
-Alternatively, one of the arguments that comes before this argument MUST be a pair of that module's name and a major version such that there exists a specification for that module and major version defining this capability.
+Alternatively, one of the arguments that comes before this argument MUST be a pair of that module's name and some major version, as accepted by `<module-name-with-major-version>`, such that there exists a specification for that module and major version defining this capability.
 
 The first message that a client sends MUST be a `want` message, and the argument list MUST start with at least one version of `core` (i.e., any of `core1`, `core2`, `core3`, and so on).
 
@@ -403,7 +403,7 @@ From this and the definition of the `want` message also follows that the use of 
 For `want` arguments that are capability names, the corresponding `have` argument is the same string, the capability name.
 A server SHALL NOT agree to using a capability if it has not previously agreed to using the module defining said capability, unless it agrees to using the module in the same `have` message.
 
-For `want` arguments that are pairs of module names and major version, the corresponding `have` argument is the corresponding `want` argument, with a dot and a positive integer appended to it.
+For `want` arguments that are pairs of module names and major version, the corresponding `have` argument is the original `want` argument, with a dot and a positive integer appended to it.
 The positive integer indicates the maximal minor version of this module that is understood by the server.
 Receipt of the `have` message containing this argument entitles the client to use all message types, properties and capabilities defined in the specification of that module with the same major version number and the same, or a smaller, minor version number.
 
