fix all occurrences of <scoped-name> with major versions
Pursuant to the change in the branch merged in this commit's parent.

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -225,7 +225,7 @@ Each message type MUST have a **name** which is accepted by `<message-type>` (se
 Each property or capability MUST have a **name** which is accepted by `<scoped-name>` (see section 2.2).
 
 For each message type, property and capability (except for the `want` and `have` message types defined in section 4), the part of its name before the dot MUST be equivalent to the name of the module whose specification defines it.
-For example, a module with a name of `example2` may define a message type named `example2.foo` and a property named `example2.bar`, but not a message type named `example1.foo` or a property named `sample2.bar`.
+For example, a module with a name of `example2` may define a message type named `example.foo` and a property named `example.bar`, but not a message type named `sample.foo` or a property named `sample.bar`.
 
 Each **message type** is defined by its name and a set of criteria describing when a message whose first element is the message type's name is to be considered valid by the recipient.
 These criteria include at least:
@@ -503,35 +503,35 @@ For `core.sub` messages, this applies regardless of whether the client sending t
 The following snippet shows examples of valid and invalid pairs of `core.sub` messages and `core.pub` replies.
 The snippet is not a single message stream.
 Each pair of messages is to be considered individually.
-The snippet assumes that `foo1.bar` and `foo1.baz` are properties which are defined by the module `foo1` and which can assume arbitrary values, and that the server has agreed to using `foo1` and to all capabilities required by these properties.
+The snippet assumes that `foo.bar` and `foo.baz` are properties which are defined by the module `foo1` and which can assume arbitrary values, and that the server has agreed to using `foo1` and to all capabilities required by these properties.
 
 ```vt6
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar hello-world foo1.baz 20)
---> valid; property "foo1.bar" has the value "hello-world" and "foo1.baz" has the value "20"
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar hello-world foo.baz 20)
+--> valid; property "foo.bar" has the value "hello-world" and "foo.baz" has the value "20"
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar "hello-world" foo1.baz "20")
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar "hello-world" foo.baz "20")
 --> valid, and semantically identical to the previous example since the bareword hello-world represents the same string as the quoted string "hello-world"
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar (hello (world)) foo1.baz 20)
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar (hello (world)) foo.baz 20)
 --> valid; property values may be arbitrarily complex s-expressions if the spec defining the property allows it
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar hello-world foo1.baz)
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar hello-world foo.baz)
 --> invalid; odd number of arguments
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar hello-world)
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar hello-world)
 --> invalid; missing a property mentioned in the `core.sub` message
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.bar hello-world foo1.baz 20 foo1.extra 10)
+(core.sub foo.bar foo.baz)
+(core.pub foo.bar hello-world foo.baz 20 foo.extra 10)
 --> invalid; references a property not mentioned in the `core.sub` message
 
-(core.sub foo1.bar foo1.baz)
-(core.pub foo1.baz 20 foo1.bar hello-world)
+(core.sub foo.bar foo.baz)
+(core.pub foo.baz 20 foo.bar hello-world)
 --> invalid; properties not listed in correct order
 ```
 
@@ -561,11 +561,11 @@ For example:
 
 ```vt6
 # this message...
-(core.set foo1.bar value1 foo1.baz value2)
+(core.set foo.bar value1 foo.baz value2)
 # ...implies this message...
-(core.sub foo1.bar foo1.baz)
+(core.sub foo.bar foo.baz)
 # ...and may result in a reply like this
-(core.pub foo1.bar value1 foo1.baz value3)
+(core.pub foo.bar value1 foo.baz value3)
 ```
 
 *Rationale:* For properties that only need to be set once, this reduces the number of messages required from four (sub-pub-set-pub) to two (set-pub).
