--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -33,7 +33,7 @@ The server SHALL be able to distinguish between server connections opened by dif
 This does not necessarily mean that the server can identify which server connection belongs to which client process.
 
 *Rationale:* The server connection is separate from the standard input and output for scenarios where the VT6 client must be certain that the messages it sends are received by the VT6 server and not by another party (such as the next client in a shell pipe), and vice versa for server-to-client messages.
-In POSIX, the message input and output replace the [special capabilities of terminal devices](https://linux.die.net/man/3/termios).
+In POSIX, the server connection replaces the [special capabilities of terminal devices](https://linux.die.net/man/3/termios).
 
 If the platform allows VT6 client processes to be started while a VT6 server is not present, the platform MUST define a method for client processes to determine whether a VT6 server is present.
 If no VT6 server is present, the client process SHALL not be considered a VT6 client for the purpose of this specification, and any other specifications that inherit the meaning of the term "VT6 client" from it.
