--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -584,7 +584,8 @@ The server might reject this, and report the previous value in the `core.pub` re
 - Required capabilities: none
 - Number of arguments: none
 
-Upon receiving an invalid message, a server or client MAY reply by sending a `core.nope` message. It MUST do so if:
+Upon receiving an invalid message, a server or client MAY reply by sending a `core.nope` message.
+It MUST do so if:
 
 1. the recipient cannot determine the message type of the invalid message, or
 2. the recipient can determine, based on the message type of the invalid message, that the sender is waiting for a reply.
