--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -463,8 +463,8 @@ If the client finds that the server has not agreed to a module or capability tha
 Upon receiving an invalid message, a server or client MAY reply by sending a `nope` message with no arguments.
 It MUST do so if:
 
-1. the recipient cannot determine the message type of the invalid message, or
-2. the recipient can determine, based on the message type of the invalid message, that the sender is waiting for a reply.
+1. it cannot determine the message type of the invalid message, or
+2. it can determine, based on the message type of the invalid message, that the sender is waiting for a reply.
 
 As an exception, the recipient SHALL NOT send a `nope` message when a module or capability that the server has agreed to mandates a different behavior for the invalid message in question.
 
