incorporate review comments

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -383,7 +383,7 @@ The first message that a client sends on each server connection MUST be a `want`
 
 - Directionality: server to client
 - Required capabilities: none
-- Number of arguments: zero, one or three
+- Number of arguments: zero, one or two
 
 Each argument MUST be a bareword.
 Quoted strings are not allowed in this message.
@@ -391,22 +391,26 @@ Quoted strings are not allowed in this message.
 *Rationale:* Same as in section 4.1.
 
 Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module or capability.
-If the `want` message is valid, but the server does not agree to the requested module and capability, it MUST reply with a `have` message with zero arguments.
+If the `want` message is valid, but the server does not agree to the requested module or capability, it MUST reply with a `have` message with zero arguments.
 
-If the `want` message requests usage of a module and the server agrees to using that module, it MUST reply with a `have` message with three arguments: the module name, the major and minor version of the specification supported by the server.
+#### 4.2.1. Answering requests for modules
+
+If the `want` message requests usage of a module and the server agrees to using that module, it MUST reply with a `have` message with two arguments: the module name and the full version of the specification supported by the server.
 Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number, except for functionality dependent on capabilities.
-The major and minor version MUST be formatted according to the `<major-version>` and `<minor-version>` grammar elements defined above.
-The major version in the `have` message MUST be one of the major versions that appeared in the original `want` message.
+The full version MUST be formatted according to the `<full-version>` grammar element defined above.
+The major version contained therein MUST be one of the major versions that appeared in the original `want` message.
 
 The server MUST NOT agree to using a module if it does not support any of the major versions of that module which were offered in the `want` message.
 The server MUST NOT agree to using multiple major versions of the same module, neither in a single `have` message or across multiple `have` messages on the same server connection.
 The server MAY agree to using different major versions of the same module on different server connections.
 
 When a `want` message concerns the same module as an earlier `want` message, the server MUST reply consistently.
-If it agreed to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST agree to this major version and offer the same minor version as in the earlier `have` message.
+If it agreed to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST agree to this major version and offer the same full version as in the earlier `have` message.
 If it did not agree to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST NOT agree to this major version.
 
-If the `want` message requests usage of a capability and the server agrees to using that module, it MUST reply with a `have` message with a single argument: the capability name as accepted by `<scoped-name>`.
+#### 4.2.2. Answering requests for capabilities
+
+If the `want` message requests usage of a capability and the server agrees to using that capability, it MUST reply with a `have` message with a single argument: the capability name as accepted by `<scoped-name>`.
 Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number, where such functionality depends on the negotiated capability.
 
 A server SHALL NOT agree to using a capability if it did not agree to using a module that defines this capability in any prior `have` message on the same server connection.
@@ -414,28 +418,30 @@ A server SHALL NOT agree to using a capability if it did not agree to using a mo
 When a `want` message concerns the same capability as an earlier `want` message, the server MUST reply consistently.
 If it agreed to using the capability in an earlier `have` message, it MUST agree to it again, and vice versa.
 
+#### 4.2.3. Examples
+
 The following snippet shows examples of valid and invalid streams of `want` messages and `have` replies.
 Each set of messages, as separated by an empty line, is to be considered as occurring on separate server connections.
 
 ```vt6
 (want core 1)
-(have core 1 0)
+(have core 1.0)
 (want foo 2)
-(have foo 2 3)
+(have foo 2.3)
 --> client can now use core1.0 module and either foo2.0, foo2.1, foo2.2 or foo2.3 module
 
 (want core 1 2)
-(have core 2 1)
+(have core 2.1)
 --> client can now use either core2.0 or core2.1 module, but not core1.x modules
 
 (want core 1)
-(have core 1 0)
+(have core 1.0)
 (want foo.cap)
 (have)
 --> cannot negotiate capability from foo before usage of foo module has been agreed upon
 
 (want core 1)
-(have core 1 0)
+(have core 1.0)
 (want foo 1 2)
 (have)
 (want foo.cap)
@@ -443,17 +449,17 @@ Each set of messages, as separated by an empty line, is to be considered as occu
 --> server did not agree to using foo module and thus cannot agree to using a capability from that module
 
 (want core 1)
-(have core 1 0)
+(have core 1.0)
 (want foo 1 2)
-(have foo 1 1)
+(have foo 1.1)
 (want foo.cap)
 (have)
 --> server has not agreed to capability
 
 (want core 1)
-(have core 1 0)
+(have core 1.0)
 (want foo 1 2)
-(have foo 1 1)
+(have foo 1.1)
 (want foo.cap)
 (have foo.cap)
 --> server has agreed to capability
